--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
   --transparent: rgba(0, 0, 0, 0);
   --lightText: rgba(220,220,220,1);
   --hovLightText: rgba(210,210,210,1);
-  --darkText: rgba(0,0,0,1);
-  --hovDarkText: rgba(20,20,20,1);
+  --darkText: rgba(20,20,20,1);
+  --hovDarkText: rgba(50,50,50,1);
   --about: rgba(198,45,53,1);
   --works: rgba(223,189,84,1);
   --resume: rgba(74,74,156,1);
@@ -47,6 +47,8 @@ header{
   height: 50px;
   align-items: flex-end;
 }
+
+/* This concerns the activating checkbx and the label */
 
 #nav-toggle{
   display: none;
@@ -97,6 +99,8 @@ header{
 .logo-container,  #nav-logo{
   height: 100%;
 }
+
+/* Properties of the drop down itself */
 
 nav{
   position: absolute;
@@ -198,11 +202,15 @@ CONTENT AND LANDING PAGE HERE
   font-size: 2em;
 }
 
-/*
-BEGIN CODE FOR DESKTOP ONLY
-*/
+.text p{
+  font-size: 1.5em;
+}
 
-@media only screen and (min-width: 768px) {
+/********************************************************************************
+  Media Query begins here
+*********************************************************************************/
+
+@media only screen and (min-width: 800px) {
   .container{
 
   }
@@ -212,18 +220,29 @@ BEGIN CODE FOR DESKTOP ONLY
     background-color: var(--headingBackground);
     width:20%;
     height: 100%;
-    padding: 10px 30px 10px 0px;
+    padding: 20px 30px 20px 30px;
     z-index: 999;
     /* TODO: is this needed? vvvv */
     text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
+  /* This is still used because it mainly styles the logo */
+
   .navbar{
+    /* TODO: Check to see if following position is needed */
+    position: relative;
+    flex: 0 3 100px;
     display: flex;
-    justify-content: flex-end;
-    height: 50px;
+    justify-content: center;
     align-items: flex-end;
+    height: 100px;
+    top: 0px;
   }
+
+  /* Remove button */
 
   .nav-toggle-label{
     display: none;
@@ -237,19 +256,36 @@ BEGIN CODE FOR DESKTOP ONLY
     /* TODO: Clean up text */
     /* background-color: var(--headingBackground); */
     /* left: 0px; */
+    /* background: var(--headingBackground); */
+    /* display: none; */
     position: relative;
     text-align: right;
     top: 0;
     left: 0;
-    background: var(--headingBackground);
+    font-size: 2em;
+    font-weight: 600;
     width: 100%;
     transform: rotateX(0deg);
+    flex: 1 1 auto;
+    justify-content: center;
 
-    /* display: none; */=
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+
+  .nav-spacer-1{
+    flex: 1 0 10px
+  }
+
+  .nav-spacer-2{
+    flex: 4 4 100px
   }
 
   nav ul{
     list-style: none;
+    /* TODO: Check to see the impact it has */
+    padding: 0;
     margin: 0px;
     left: 0px;
     top: 0px;
@@ -257,7 +293,7 @@ BEGIN CODE FOR DESKTOP ONLY
   }
 
   nav li{
-    line-height: 30px;
+    line-height: 50px;
   }
 
   nav a{
@@ -269,6 +305,9 @@ BEGIN CODE FOR DESKTOP ONLY
     color: var(--hovDarkText);
   }
 
+  .social-media{
+    flex: 0 1 100px;
+  }
 
   /* START OF CONTENT */
 
