--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ CONTENT AND LANDING PAGE HERE
 
 /* FOLLOWING IS APPLICABLE IN BOTH MOBILE AND WEB */
 
-.content{
+.section-container{
   position: absolute;
   top: 70px;
   width: 100%;
@@ -168,7 +168,7 @@ CONTENT AND LANDING PAGE HERE
   flex-direction: column;
 }
 
-.sub-content{
+.section{
   padding: 20px 40px;
 
   /* TODO: see if these following styles are needed. is padding enough? */
@@ -176,9 +176,10 @@ CONTENT AND LANDING PAGE HERE
   grid-template-columns: 40px 1fr 40px; */
 }
 
-/* .text{
-  grid-column: 2/3;
-} */
+.content{
+  /* grid-column: 2/3; */
+  display: grid;
+}
 
 .about{
   background-color: var(--about);
@@ -200,16 +201,72 @@ CONTENT AND LANDING PAGE HERE
   color: var(--darkText);
 }
 
-.text h3{
-  font-size: 2em;
+.instagram-container{
+  display: flex;
+  justify-content: center;
 }
 
-.text p{
-  font-size: 1.5em;
+.content h1{
+  font-family: 'Roboto Slab', serif;
+  font-size: 6em;
+  /* line-height: 50px;*/
+  margin: 0;
+  text-align: center;
 }
+
+.content p{
+  font-size: 1.75em;
+  margin: 20px 0px;
+  line-height: 50px;
+}
+
+.column{
+  /* display: flex; */
+}
+
+.column h2{
+  font-size: 2.5em;
+  font-weight: 600;
+}
+
+.column .highlight{
+  font-size: 1em;
+  font-weight: 100;
+  font-style: italic;
+}
+
+/* .head-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+} */
+
+.head{
+  /* display: flex; */
+  /* TODO: test this */
+  /* justify-content: flex-end; */
+  text-align: right;
+}
+
+.head-highlight .highlight{
+  /* margin: 15px 0px; */
+  margin: 0px;
+}
+
+.head-main h2{
+  margin: 15px 0px;
+}
+
+.head-hr{
+  width: 100px;
+  border: 1px solid white;
+  margin: 0px;
+  margin-left: auto;
+}
+
 
 /********************************************************************************
-  Media Query begins here
+  Media Queries begins here
 *********************************************************************************/
 
 @media only screen and (min-width: 765px) {
@@ -244,9 +301,9 @@ CONTENT AND LANDING PAGE HERE
     top: 0px;
   }
 
-    .logo-container,  #nav-logo{
-      height: 75%;
-    }
+  .logo-container,  #nav-logo{
+    height: 75%;
+  }
 
   /* Remove button */
 
@@ -254,7 +311,7 @@ CONTENT AND LANDING PAGE HERE
     display: none;
   }
 
-
+  /* TODO: use 'top' and  -transform: translate; to position instead*/
   nav{
     /* TODO: Clean up text */
     /* background-color: var(--headingBackground); */
@@ -278,7 +335,13 @@ CONTENT AND LANDING PAGE HERE
   }
 
   .nav-spacer-1{
-    flex: 1 0 10px
+    flex: 1 0 10px;
+  }
+
+  .nav-spacer-1::before{
+    content: '';
+    height:2px;
+    background: var(--darkText);
   }
 
   .nav-spacer-2{
@@ -314,11 +377,49 @@ CONTENT AND LANDING PAGE HERE
 
   /* START OF CONTENT */
 
-  .content{
+  .section-container{
     left:20%;
     width: 80%;
     top: 0;
   }
+
+  .content h1{
+    text-align: left;
+  }
+
+  /* TODO: Adjust this so it adjust better with screen size */
+
+  /*
+  ABOUT SECTION
+  */
+
+  .content-about{
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto, auto;
+    grid-column-gap: 30px;
+  }
+
+  .content-about h1{
+    grid-column: 1/7;
+    grid-row: 1/2;
+  }
+
+    /* Instagram here */
+  .instagram-container{
+    grid-column: 9/-1;
+    grid-row: 2/3;
+  }
+
+  .about-column-1 {
+    grid-column: 1/9;
+    grid-row: 2/3;
+  }
+
+
+  /* TODO: This seems unneeded because of text rule at line 212*/
+  /* .column p{
+    font-size: 1.75em;
+  } */
 }
 
 /********************************************************************************
@@ -359,4 +460,5 @@ CONTENT AND LANDING PAGE HERE
   nav{
     font-size: 2em;
   }
+
 }
