--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@
 :root{
   --headingBackground: rgba(255, 255, 255, 1);
   --transparent: rgba(0, 0, 0, 0);
-  --lightText: rgba(220,220,220,1);
+  --lightText: rgba(230,230,230,1);
   --hovLightText: rgba(210,210,210,1);
   --darkText: rgba(20,20,20,1);
-  --hovDarkText: rgba(50,50,50,1);
+  --hovDarkText: rgba(90,90,90,1);
   --about: rgba(198,45,53,1);
   /* the old color yellow:
   --works: rgba(223,189,84,1); */
@@ -212,12 +212,100 @@ CONTENT AND LANDING PAGE HERE
   grid-column-gap: 0px;
 }
 
+/* TODO: clear this obsolete annoying instagram out
 .instagram-container{
   grid-column: 2/3;
   grid-row: 2/3;
   display: flex;
   justify-content: center;
+} */
+
+.media-container{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: flex-start; */
+  position:relative;
+  /* transform: translate(-50px, 0px); */
 }
+
+/* Circle design for pictures */
+
+.media{
+  /* position: absolute; */
+  border-radius: 50%;
+  background-color: var(--about);
+}
+
+.media img{
+  width: 100%;
+  border-radius: 50%;
+}
+
+.media-1{
+  position: absolute;
+  width: 100%;
+}
+
+.media-1 img{
+  position: absolute;
+  width: 35%;
+  border: 10px solid var(--about);
+  z-index: 200;
+  box-sizing: content-box;
+  top: 35px;
+  left: -5px;
+}
+
+.media-2{
+  width: 100%;
+  margin-left: auto;
+  margin-top: 40px;
+}
+
+.media-3{
+  display: none;
+}
+
+
+/* POLAROID design for pictures*/
+
+/* .media{
+  background-color: var(--lightText) ;
+  position: absolute;
+  width: 250px;
+  padding: 20px 20px 95px 20px;
+  border-radius: 20px;
+  margin: 10px;
+  box-shadow: 0px 0px 10px 0px var(--darkText);
+}
+
+.media-container img{
+  width: 100%;
+  border-radius: 3px;
+}
+
+.media-1{
+  transform: rotate(-30deg);
+  top:100px;
+  left: -75px;
+  z-index: 300;
+}
+
+.media-2{
+  transform: rotate(20deg);
+  top: 00px;
+  left: 75px;
+  z-index: 200;
+}
+
+.media-3{
+  transform: rotate(-10deg);
+  top: -100px;
+  left: -75px;
+  z-index: 100;
+} */
 
 .content h1{
   font-family: 'Roboto Slab', serif;
@@ -232,24 +320,28 @@ CONTENT AND LANDING PAGE HERE
 .content p{
 
   /* font-size: 1em; */
-  margin: 20px 0px;
+  margin: 0px 0px;
   line-height: 25px;
-}
-
-.instagram-media{
-  grid-column: 2/3;
-  /* height: 100%; */
+  text-align: center;
 }
 
 .column{
   grid-column: 2/3;
   /* display: flex; */
-  text-align: left;
+  /* text-align: left; */
 }
 
 .column h2{
   font-size: 2.5em;
   font-weight: 600;
+}
+
+.about mark{
+  background-color: var(--lightText);
+  color: var(--about);
+  border-left: .2em solid var(--lightText);
+  border-right: .2em solid var(--lightText);
+  box-sizing: content-box;
 }
 
 .column .highlight{
@@ -258,6 +350,7 @@ CONTENT AND LANDING PAGE HERE
   font-style: italic;
 }
 
+/* Header to the column in the about section */
 /* .head-container{
   display: flex;
   flex-direction: column;
@@ -268,7 +361,7 @@ CONTENT AND LANDING PAGE HERE
   /* display: flex; */
   /* TODO: test this */
   /* justify-content: flex-end; */
-  text-align: right;
+  text-align: center;
 }
 
 .head-highlight .highlight{
@@ -284,7 +377,9 @@ CONTENT AND LANDING PAGE HERE
   width: 100px;
   border: 1px solid white;
   margin: 0px;
-  margin-left: auto;
+  margin-left: 50%;
+  transform: translate(-50%, 0);
+  /* margin-right: auto; */
 }
 
 
@@ -421,12 +516,12 @@ CONTENT AND LANDING PAGE HERE
 
   .content h1{
     font-family: 'Roboto Slab', serif;
-    font-size: 6em;
+    font-size: 4em;
     /* line-height: 50px;*/
     margin: 0;
-    text-align: center;
-    grid-column: 2/3;
-    grid-row: 1/2;
+    text-align: left;
+    /* grid-column: 2/3;
+    grid-row: 1/2; */
   }
   /* TODO: Adjust this so it adjust better with screen size */
 
@@ -436,7 +531,7 @@ CONTENT AND LANDING PAGE HERE
 
   .content-about{
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto, auto;
+    grid-template-rows: auto auto auto auto;
     grid-column-gap: 30px;
   }
 
@@ -445,23 +540,88 @@ CONTENT AND LANDING PAGE HERE
     grid-row: 1/2;
   }
 
-  .content p{
+  /* TRYING OUT NEW LAYOUT */
+  .content-about h1{
+    grid-column: 9/-1;
+    grid-row: 1/2;
+    text-align: right;
+  }
 
-    font-size: 1.75em;
-    margin: 20px 0px;
+  .content p{
+    font-size: 1.70em;
     line-height: 50px;
   }
+
     /* Instagram here */
+  /* TODO: get all of this gross instagram out
   .instagram-container{
     grid-column: 9/-1;
     grid-row: 2/3;
   }
 
+   iframe.instagram-media{
+    min-width: 185px;
+  } */
+
+  /* THREE RING STACK */
+
+  .media-container{
+    grid-column: 9/-1;
+    grid-row: 2/3;
+  }
+
+  .media{
+
+  }
+
+  .media img{
+    width: 100%;
+    border-radius: 50%;
+    box-sizing:content-box;
+    border: 15px solid var(--about);
+  }
+
+  .media-1{
+    background-color: transparent;
+    position: relative;
+    width: 100%;
+    margin-top: 45%;
+  }
+
+  .media-1 img{
+    position: relative;
+    width: 100%;
+    z-index: 200;
+    left: -15px;
+  }
+
+  .media-2{
+    width: 100%;
+    margin-left: -15px;
+    margin-top: -41.5%;
+    z-index: 100;
+    /* background: transparent; */
+  }
+
+  .media-3{
+    display: block;
+    width: 100%;
+    top: 100px;
+    z-index: 100;
+    margin-top: -225%;
+    margin-left: -15px;
+  }
+
+  /* Paragraph in about section */
   .about-column-1 {
     grid-column: 1/9;
     grid-row: 2/3;
   }
-
+  /* trying out new layout */
+  .about-column-1 {
+    grid-column: 1/9;
+    grid-row: 1/4;
+  }
 
   /* TODO: This seems unneeded because of text rule at line 212*/
   /* .column p{
@@ -494,6 +654,10 @@ CONTENT AND LANDING PAGE HERE
     font-size: 1.5em;
   }
 
+  .content h1{
+    font-size: 5.4em;
+  }
+
 }
 
 @media only screen and (min-width: 1210px) {
@@ -508,4 +672,48 @@ CONTENT AND LANDING PAGE HERE
     font-size: 2em;
   }
 
+  .content p{
+    font-size: 2.25em;
+    line-height: 50px;
+  }
+
+  .content h1{
+    font-size: 6em;
+  }
+}
+
+@media only screen and (min-width: 1700px) {
+
+
+
+  /* widens the triple circle */
+  .about-column-1 {
+    grid-column: 1/8;
+    grid-row: 2/3;
+  }
+  /* trying out new layout */
+  .about-column-1 {
+    grid-column: 1/8;
+    grid-row: 1/4;
+  }
+
+  .media-container{
+    grid-column: 8/-1;
+    grid-row: 2/3;
+  }
+
+  .media{
+    width: 90%;
+    margin-top: 35%;
+  }
+  .media-2{
+    margin-top: -46%;
+  }
+  .media-3{
+    margin-top: -183%;
+  }
+
+  .content h1{
+    font-size: 7em;
+  }
 }
