--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,39 @@
 /* STYLES.CSS*/
 
-:root{
+:root {
   --headingBackground: rgba(255, 255, 255, 1);
   --transparent: rgba(0, 0, 0, 0);
-  --lightText: rgba(230,230,230,1);
-  --hovLightText: rgba(210,210,210,1);
-  --darkText: rgba(20,20,20,1);
-  --hovDarkText: rgba(90,90,90,1);
-  --about: rgba(198,45,53,1);
+  --lightText: rgba(230, 230, 230, 1);
+  --hovLightText: rgba(210, 210, 210, 1);
+  --darkText: rgba(20, 20, 20, 1);
+  --hovDarkText: rgba(90, 90, 90, 1);
+  --about: rgba(198, 45, 53, 1);
   /* the old color yellow:
   --works: rgba(223,189,84,1); */
-  --works: rgba(250,192,22,1);
-  --resume: rgba(74,74,156,1);
-  --readingList: rgba(50,165,38,1);
+  --works: rgba(250, 192, 22, 1);
+  --resume: rgba(74, 74, 156, 1);
+  --readingList: rgba(50, 165, 38, 1);
 }
 
-*,*::before,*::after{
+*, *::before, *::after {
   box-sizing: border-box;
 }
 
-body{
+body {
   font-family: 'Raleway', sans-serif;
   margin: 0;
   /* TODO: Check if this is needed */
   display: flex;
 }
 
-
-
 /* NAVIGATION BAR STYLES */
 
-header{
+header {
   position: fixed;
   background-color: var(--headingBackground);
-  width:100%;
+  width: 100%;
   padding: 10px 30px 10px 0px;
   z-index: 9999;
-
   perspective: 300px;
   perspective-origin: bottom;
   /*TODO: Check this, are these two ready for removal?*/
@@ -45,7 +42,7 @@ header{
   /* Do we need this^^ */
 }
 
-.navbar{
+.navbar {
   display: flex;
   justify-content: flex-end;
   height: 50px;
@@ -55,12 +52,12 @@ header{
 
 /* This concerns the activating checkbx and the label */
 
-#nav-toggle{
+#nav-toggle {
   display: none;
 }
 
-.nav-toggle-label{
-  position:absolute;
+.nav-toggle-label {
+  position: absolute;
   top: 20px;
   left: 15px;
   margin-left: 1em;
@@ -70,14 +67,11 @@ header{
   align-items: center;
 }
 
-.nav-toggle-label span{
+.nav-toggle-label span {
   top: 13px;
 }
 
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after
-{
+.nav-toggle-label span, .nav-toggle-label span::before, .nav-toggle-label span::after {
   display: block;
   background: black;
   height: 3px;
@@ -86,28 +80,27 @@ header{
   position: relative;
 }
 
-.nav-toggle-label span::before,
-.nav-toggle-label span::after{
+.nav-toggle-label span::before, .nav-toggle-label span::after {
   content: '';
   position: absolute;
   --dist: 10px;
 }
 
-.nav-toggle-label span::before{
+.nav-toggle-label span::before {
   bottom: var(--dist);
 }
 
-.nav-toggle-label span::after{
+.nav-toggle-label span::after {
   top: var(--dist);
 }
 
-.logo-container,  #nav-logo{
+.logo-container, #nav-logo {
   height: 100%;
 }
 
 /* Properties of the drop down itself */
 
-nav{
+nav {
   position: absolute;
   text-align: left;
   top: 100%;
@@ -116,14 +109,13 @@ nav{
   width: 100%;
   padding-bottom: 5px;
   font-size: 1.25em;
-
   /* This gives it the swinging out effect */
   transform-origin: top;
   transform: rotateX(-90deg);
   transition: transform 300ms ease-in-out;
 }
 
-nav ul{
+nav ul {
   list-style: none;
   margin: 0px;
   left: 0px;
@@ -132,38 +124,39 @@ nav ul{
   transition: opacity 200ms ease-in-out 300ms;
 }
 
-nav li{
+nav li {
   line-height: 40px;
 }
 
-nav a{
+nav a {
   text-decoration: none;
   color: var(--darkText);
 }
 
-nav a:hover{
+nav a:hover {
   color: var(--hovDarkText);
 }
 
-#nav-toggle:checked ~ nav{
+#nav-toggle:checked~nav {
   transform: rotateX(0deg);
   /* transform: scale(1, 1); */
 }
 
-#nav-toggle:checked ~ nav ul{
+#nav-toggle:checked~nav ul {
   opacity: 1;
 }
 
 /*
 CONTENT AND LANDING PAGE HERE
 */
-.landing-page{
+
+.landing-page {
   display: none;
 }
 
 /* FOLLOWING IS APPLICABLE IN BOTH MOBILE AND WEB */
 
-.section-container{
+.section-container {
   position: absolute;
   top: 70px;
   /* width: 100%; */
@@ -172,83 +165,73 @@ CONTENT AND LANDING PAGE HERE
   /* overflow-x:hidden; */
 }
 
-.section{
+.section {
   padding: 20px;
-
   /* TODO: see if these following styles are needed. is padding enough? */
   /* display: grid;
   grid-template-columns: 40px 1fr 40px; */
 }
 
-.content{
+.content {
   /* grid-column: 2/3; */
   display: grid;
 }
 
-.about{
+.about {
   background-color: var(--about);
   color: var(--lightText);
 }
 
-.works{
+.works {
   background-color: var(--works);
   color: var(--darkText);
 }
 
-.resume{
+.resume {
   background-color: var(--resume);
   color: var(--lightText);
 }
 
-.reading-list{
+.reading-list {
   background-color: var(--readingList);
   color: var(--darkText);
 }
 
-
-.content{
+.content {
   grid-template-columns: 5px auto 5px;
   grid-template-rows: auto auto auto;
   grid-column-gap: 0px;
 }
 
-/* TODO: clear this obsolete annoying instagram out
-.instagram-container{
-  grid-column: 2/3;
-  grid-row: 2/3;
-  display: flex;
-  justify-content: center;
-} */
-
-.media-container{
+.media-container {
   grid-column: 2/3;
   grid-row: 2/3;
   /* display: flex;
   flex-direction: column;
   justify-content: flex-start; */
-  position:relative;
+  position: relative;
   /* transform: translate(-50px, 0px); */
 }
 
 /* Circle design for pictures */
 
-.media{
+.media {
   /* position: absolute; */
   border-radius: 50%;
   background-color: var(--about);
 }
 
-.media img{
+.media img {
   width: 100%;
   border-radius: 50%;
 }
 
-.media-1{
+.media-1 {
   position: absolute;
   width: 100%;
 }
 
-.media-1 img{
+.media-1 img {
   position: absolute;
   width: 35%;
   border: 10px solid var(--about);
@@ -258,16 +241,15 @@ CONTENT AND LANDING PAGE HERE
   left: -5px;
 }
 
-.media-2{
+.media-2 {
   width: 100%;
   margin-left: auto;
   margin-top: 40px;
 }
 
-.media-3{
+.media-3 {
   display: none;
 }
-
 
 /* POLAROID design for pictures*/
 
@@ -307,7 +289,7 @@ CONTENT AND LANDING PAGE HERE
   z-index: 100;
 } */
 
-.content h1{
+.content h1 {
   font-family: 'Roboto Slab', serif;
   font-size: 4.25em;
   /* line-height: 50px;*/
@@ -317,26 +299,26 @@ CONTENT AND LANDING PAGE HERE
   grid-row: 1/2;
 }
 
-.content p{
-
-  /* font-size: 1em; */
+.content p {
+  font-size: 1.1em;
   margin: 0px 0px;
-  line-height: 25px;
-  text-align: center;
+  text-align: justify;
+  padding: 0px 5px;
 }
 
-.column{
+.column {
   grid-column: 2/3;
+  grid-row: 3/4;
   /* display: flex; */
   /* text-align: left; */
 }
 
-.column h2{
+.column h2 {
   font-size: 2.5em;
   font-weight: 600;
 }
 
-.about mark{
+.about mark {
   background-color: var(--lightText);
   color: var(--about);
   border-left: .2em solid var(--lightText);
@@ -344,36 +326,39 @@ CONTENT AND LANDING PAGE HERE
   box-sizing: content-box;
 }
 
-.column .highlight{
+.column .highlight {
   font-size: 1em;
   font-weight: 100;
+  line-height: 35px;
   font-style: italic;
+  text-align: center;
 }
 
 /* Header to the column in the about section */
+
 /* .head-container{
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 } */
 
-.head{
+.head {
   /* display: flex; */
   /* TODO: test this */
   /* justify-content: flex-end; */
   text-align: center;
 }
 
-.head-highlight .highlight{
+.head-highlight .highlight {
   /* margin: 15px 0px; */
   margin: 0px;
 }
 
-.head-main h2{
+.head-main h2 {
   margin: 15px 0px;
 }
 
-.head-hr{
+.head-hr {
   width: 100px;
   border: 1px solid white;
   margin: 0px;
@@ -382,20 +367,54 @@ CONTENT AND LANDING PAGE HERE
   /* margin-right: auto; */
 }
 
+/* These are the two images of states */
+
+/* Is this needed?? */
+
+.hometown {
+  grid-column: 2/3;
+  grid-row: 4/5;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* padding: 15px; */
+}
+
+.img-caption-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* padding: 5px; */
+  /* justify-content: center; */
+}
+
+.img-new-york {
+  width: 100%;
+}
+
+.img-philippines {
+  width: 70%;
+}
+
+.figcaption {
+  font-weight: 100;
+  font-style: italic;
+  text-align: center;
+  margin-top: 5px;
+  font-size: .9em;
+}
 
 /********************************************************************************
   Media Queries begins here for laptop
 *********************************************************************************/
 
 @media only screen and (min-width: 765px) {
-  .container{
-
-  }
+  .container {}
   /* Reset the nav */
-  header{
+  header {
     position: fixed;
     background-color: var(--headingBackground);
-    width:20%;
+    width: 20%;
     height: 100%;
     padding: 35px 30px 35px 30px;
     z-index: 999;
@@ -405,10 +424,8 @@ CONTENT AND LANDING PAGE HERE
     flex-direction: column;
     justify-content: space-between;
   }
-
   /* This is still used because it mainly styles the logo */
-
-  .navbar{
+  .navbar {
     /* TODO: Check to see if following position is needed */
     position: relative;
     flex: 0 3 100px;
@@ -418,19 +435,15 @@ CONTENT AND LANDING PAGE HERE
     height: 100px;
     top: 0px;
   }
-
-  .logo-container,  #nav-logo{
+  .logo-container, #nav-logo {
     height: 75%;
   }
-
   /* Remove button */
-
-  .nav-toggle-label{
+  .nav-toggle-label {
     display: none;
   }
-
   /* TODO: use 'top' and  -transform: translate; to position instead*/
-  nav{
+  nav {
     /* TODO: Clean up text */
     /* background-color: var(--headingBackground); */
     /* left: 0px; */
@@ -446,27 +459,22 @@ CONTENT AND LANDING PAGE HERE
     transform: rotateX(0deg);
     flex: 1 1 auto;
     justify-content: center;
-
     display: flex;
     flex-direction: column;
     align-content: center;
   }
-
-  .nav-spacer-1{
+  .nav-spacer-1 {
     flex: 1 0 10px;
   }
-
-  .nav-spacer-1::before{
+  .nav-spacer-1::before {
     content: '';
-    height:2px;
+    height: 2px;
     background: var(--darkText);
   }
-
-  .nav-spacer-2{
+  .nav-spacer-2 {
     flex: 4 4 100px
   }
-
-  nav ul{
+  nav ul {
     list-style: none;
     /* TODO: Check to see the impact it has */
     padding: 0;
@@ -475,46 +483,36 @@ CONTENT AND LANDING PAGE HERE
     top: 0px;
     opacity: 1;
   }
-
-  nav li{
+  nav li {
     line-height: 50px;
   }
-
-  nav a{
+  nav a {
     text-decoration: none;
     color: var(--darkText);
   }
-
-  nav a:hover{
+  nav a:hover {
     color: var(--hovDarkText);
   }
-
-  .social-media{
+  .social-media {
     flex: 0 1 100px;
   }
-
   /* START OF CONTENT */
-
-  .section-container{
-    left:20%;
+  .section-container {
+    left: 20%;
     width: 80%;
     top: 0;
   }
-
-  .section{
+  .section {
     padding: 20px 40px;
-
     /* TODO: see if these following styles are needed. is padding enough? */
     /* display: grid;
     grid-template-columns: 40px 1fr 40px; */
   }
-
   /* TODO: merge these two */
-  .content h1{
+  .content h1 {
     text-align: left;
   }
-
-  .content h1{
+  .content h1 {
     font-family: 'Roboto Slab', serif;
     font-size: 4em;
     /* line-height: 50px;*/
@@ -524,86 +522,63 @@ CONTENT AND LANDING PAGE HERE
     grid-row: 1/2; */
   }
   /* TODO: Adjust this so it adjust better with screen size */
-
   /*
   ABOUT SECTION
   */
-
-  .content-about{
+  .content-about {
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto 200px auto auto;
     grid-column-gap: 30px;
   }
-
-  .content-about h1{
+  .content-about h1 {
     grid-column: 1/7;
     grid-row: 1/2;
   }
-
   /* TRYING OUT NEW LAYOUT */
-  .content-about h1{
+  .content-about h1 {
     grid-column: 9/-1;
     grid-row: 1/2;
     text-align: right;
   }
-
-  .content p{
-    font-size: 1.70em;
-    line-height: 50px;
+  .content p {
+    padding: 0px 5%;
+    font-size: 1.2em;
+    line-height: 25px;
   }
-
-    /* Instagram here */
-  /* TODO: get all of this gross instagram out
-  .instagram-container{
-    grid-column: 9/-1;
-    grid-row: 2/3;
-  }
-
-   iframe.instagram-media{
-    min-width: 185px;
-  } */
-
   /* THREE RING STACK */
-
-  .media-container{
+  .media-container {
     grid-column: 9/-1;
     grid-row: 2/3;
   }
-
-  .media{
-
-  }
-
-  .media img{
+  .media img {
     width: 100%;
     border-radius: 50%;
-    box-sizing:content-box;
+    box-sizing: content-box;
     border: 15px solid var(--about);
   }
-
-  .media-1{
+  .media-1 {
     background-color: transparent;
     position: relative;
     width: 100%;
     margin-top: 45%;
   }
-
-  .media-1 img{
+  .media-1 img {
     position: relative;
     width: 100%;
     z-index: 200;
     left: -15px;
   }
-
-  .media-2{
+  .media-2 {
     width: 100%;
     margin-left: -15px;
     margin-top: -41.5%;
     z-index: 100;
-    /* background: transparent; */
+    background: transparent;
   }
-
-  .media-3{
+  .media-2 img{
+    display:block;
+  }
+  .media-3 {
     display: block;
     width: 100%;
     top: 100px;
@@ -611,7 +586,6 @@ CONTENT AND LANDING PAGE HERE
     margin-top: -225%;
     margin-left: -15px;
   }
-
   /* Paragraph in about section */
   .about-column-1 {
     grid-column: 1/9;
@@ -622,11 +596,36 @@ CONTENT AND LANDING PAGE HERE
     grid-column: 1/9;
     grid-row: 1/4;
   }
-
-  /* TODO: This seems unneeded because of text rule at line 212*/
-  /* .column p{
-    font-size: 1.75em;
-  } */
+  /* These are the two images of states */
+  /* Is this needed?? */
+  .hometown {
+    grid-column: 1/9;
+    grid-row: 4/5;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .img-caption-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* padding: 5px; */
+    /* justify-content: center; */
+  }
+  .img-new-york {
+    width: 100%;
+  }
+  .img-philippines {
+    width: 70%;
+  }
+  .figcaption {
+    font-weight: 100;
+    font-style: italic;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 1.2em;
+  }
 }
 
 /********************************************************************************
@@ -634,58 +633,57 @@ CONTENT AND LANDING PAGE HERE
 *********************************************************************************/
 
 @media only screen and (min-width: 880px) {
-
   /* Adjusts the font height, making it more fluid */
-  nav{
+  nav {
     font-size: 1.25em;
   }
-
+  .content p {
+    font-size: 1.3em;
+    line-height: 30px;
+  }
 }
 
 @media only screen and (min-width: 985px) {
-
   /* Adjusts the logo */
-  .logo-container,  #nav-logo{
+  .logo-container, #nav-logo {
     height: 85%;
   }
-
   /* Adjusts the font height, making it more fluid */
-  nav{
+  nav {
     font-size: 1.5em;
   }
-
-  .content h1{
+  .content h1 {
     font-size: 5.4em;
   }
-
+  .content p {
+    font-size: 1.35em;
+    line-height: 35px;
+  }
 }
 
 @media only screen and (min-width: 1210px) {
-
   /* Adjusts the logo */
-  .logo-container,  #nav-logo{
+  .logo-container, #nav-logo {
     height: 100%;
   }
-
   /* Adjusts the font height, making it more fluid */
-  nav{
+  nav {
     font-size: 2em;
   }
-
-  .content p{
+  .content p {
     font-size: 2.25em;
     line-height: 50px;
   }
-
-  .content h1{
+  .content h1 {
     font-size: 6em;
+  }
+  .content p {
+    font-size: 1.5em;
+    line-height: 40px;
   }
 }
 
 @media only screen and (min-width: 1700px) {
-
-
-
   /* widens the triple circle */
   .about-column-1 {
     grid-column: 1/8;
@@ -696,24 +694,28 @@ CONTENT AND LANDING PAGE HERE
     grid-column: 1/8;
     grid-row: 1/4;
   }
-
-  .media-container{
+  .hometown {
+    grid-column: 1/8;
+  }
+  .media-container {
     grid-column: 8/-1;
     grid-row: 2/3;
   }
-
-  .media{
+  .media {
     width: 90%;
     margin-top: 35%;
   }
-  .media-2{
+  .media-2 {
     margin-top: -46%;
   }
-  .media-3{
+  .media-3 {
     margin-top: -183%;
   }
-
-  .content h1{
+  .content h1 {
     font-size: 7em;
+  }
+  .content p {
+    font-size: 1.7em;
+    line-height: 50px;
   }
 }
